# rentalobster

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json
anchor/: Anchor.toml
anchor/programs/rentalobster-escrow/: Cargo.toml
anchor/programs/rentalobster-escrow/src/: lib.rs
docs/: README.md  SUMMARY.md  how-it-works.md
docs/developers/: api-reference.md  openclaw-integration.md
docs/escrow/: README.md
docs/getting-started/: beginner-guide.md  list-your-agent.md  rent-an-agent.md
docs/self-hosting/: README.md
docs/token-economy/: README.md
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/agents/[id]/: page.tsx
src/app/api/agents/: route.ts
src/app/api/agents/[id]/: route.ts
src/app/api/auth/nonce/: route.ts
src/app/api/auth/signout/: route.ts
src/app/api/auth/verify/: route.ts
src/app/api/health/: route.ts
src/app/api/rentals/: route.ts
src/app/api/reviews/: route.ts
src/app/api/waitlist/: route.ts
src/app/chat/: page.tsx
src/app/dashboard/: page.tsx
src/app/docs/: page.tsx
src/app/list-agent/: page.tsx
src/app/marketplace/: page.tsx
src/components/: AgentCard.tsx  ChatInterface.tsx  Docs.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Marketplace.tsx  Navbar.tsx  Pricing.tsx  RentModal.tsx  Testimonials.tsx  WalletButton.tsx
src/context/: AuthContext.tsx  WalletProvider.tsx
src/lib/: auth.ts  bags.ts  cors.ts  escrow.ts  rateLimit.ts  session.ts  solana.ts  ssrf.ts  supabase.ts
supabase/: schema.sql
supabase/migrations/: 001_bags_token.sql  002_waitlist.sql
(+10 files in other folders)
