[package]
name = "rentalobster-escrow"
version = "0.1.0"
description = "RentalObster on-chain escrow program for AI agent rentals on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rentalobster_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1" }
